--- a/test.html
+++ b/test.html
@@ -1,42 +1,71 @@
-<head>
-  <style>
-    :root {
-      /* --feedbackfin-primary-color: #007aff; */
-      /* --feedbackfin-primary-color-text: #fff; */
-    }
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>FeedbackFin Test</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        padding: 2rem;
+        background: #fafafa;
+      }
+      .content {
+        background: #fff;
+        padding: 2rem;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        margin: 0 auto;
+      }
+      h1 {
+        color: #333;
+      }
+      p {
+        color: #666;
+        line-height: 1.6;
+      }
+      .feedback-btn {
+        position: fixed;
+        bottom: 2rem;
+        right: 2rem;
+        background: #6a35ff;
+        color: white;
+        border: none;
+        padding: 0.75rem 1.5rem;
+        border-radius: 8px;
+        font-size: 1rem;
+        cursor: pointer;
+      }
+      .feedback-btn:hover {
+        background: #5a28e0;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="content">
+      <h1>FeedbackFin Test Page</h1>
+      <p>
+        This is a test page to try out the screenshot feature. Click the "Send
+        Feedback" button in the bottom right corner.
+      </p>
+      <p>
+        When you click the camera icon, it will capture a screenshot of this
+        page (the widget will hide temporarily). You can then preview, remove,
+        or submit the screenshot along with your feedback.
+      </p>
+      <p>
+        The feedback will be sent to httpbin.org - check your Network tab to see
+        the payload.
+      </p>
+    </div>
 
-    body {
-      font-family: system-ui;
-      display: grid;
-      place-items: flex-end;
-      height: 200vh;
-    }
+    <button class="feedback-btn" data-feedbackfin-button>Send Feedback</button>
 
-    * {
-      box-sizing: border-box;
-    }
-  </style>
-</head>
-
-<body>
-  <button onclick="toggleTheme()" style="position: fixed; top: 8px; left: 8px">
-    Toggle theme
-  </button>
-  <button data-feedbackfin-button>Feedback</button>
-
-  <script src="./dist/index.umd.js"></script>
-  <script>
-    // import "./dist/index.modern.js";
-
-    function toggleTheme() {
-      document.body.setAttribute(
-        "data-theme",
-        document.body.getAttribute("data-theme") === "dark" ? "light" : "dark"
-      );
-    }
-
-    // document
-    //   .querySelector("button")
-    //   .addEventListener("click", feedbackfin.open);
-  </script>
-</body>
+    <script src="./dist/index.umd.js"></script>
+    <script>
+      window.feedbackfin.config = {
+        url: "https://httpbin.org/post",
+        user: { name: "Test User", email: "test@example.com" },
+      };
+    </script>
+  </body>
+</html>
