add theme support to config

--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>FeedbackFin Test</title>
@@ -64,6 +64,7 @@
     <script>
       window.feedbackfin.config = {
         url: "https://httpbin.org/post",
+        theme: "dark",
         user: { name: "Test User", email: "test@example.com" },
       };
     </script>
